--- a/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
+++ b/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
@@ -545,12 +545,12 @@
    },
    "wekeo": {
     "git": {
-     "link": " ",
+     "link": "https://github.com/wekeo/learn-osi-saf-sea-ice/blob/main/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb",
      "service_contact": "ops@eumetsat.int",
      "service_provider": "EUMETSAT"
     },
     "url": {
-     "link": " ",
+     "link": "https://jupyterhub.prod.wekeo2.eu/hub/user-redirect/lab/tree/public/wekeo4oceans/learn-osi-saf-sea-ice/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb",
      "service_contact": "ops@eumetsat.int",
      "service_provider": "EUMETSAT"
     }
