--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -337,7 +337,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
    "service": "",
