--- a/1_OSI_SAF_sea_ice_introductory/1_3b_OSI_SAF_sea_ice_mapping_Ice_Edge.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3b_OSI_SAF_sea_ice_mapping_Ice_Edge.ipynb
@@ -1590,7 +1590,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "GCOM-W",
