--- a/2_OSI_SAF_sea_ice_use_case/2_1_OSI_SAF_sea_ice_Monthly_concentration_anomalies.ipynb
+++ b/2_OSI_SAF_sea_ice_use_case/2_1_OSI_SAF_sea_ice_Monthly_concentration_anomalies.ipynb
@@ -1473,7 +1473,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "NIMBUS"
