--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -2080,7 +2080,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "GCOM-W",
