--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -1894,7 +1894,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "GCOM-W",
