--- a/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
@@ -4135,7 +4135,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "GCOM-W",
