--- a/1_OSI_SAF_sea_ice_introductory/1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb
@@ -1678,7 +1678,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "GCOM-W",
