--- a/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
@@ -1802,7 +1802,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
    "service": "",
