--- a/1_OSI_SAF_sea_ice_introductory/1_4_OSI_SAF_sea_ice_THREDDS.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_4_OSI_SAF_sea_ice_THREDDS.ipynb
@@ -815,7 +815,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
    "service": "",
