--- a/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
+++ b/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
@@ -580,7 +580,7 @@
   "originator": "EUMETSAT",
   "tags": {
    "data_provider": "EUMETSAT",
-   "orbit": " ",
+   "orbit": "LEO",
    "satellite": [
     "DMSP",
     "NIMBUS"
