--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -1910,7 +1910,7 @@
     "AMSR-E (Aqua/Terra)",
     "SSM/I (DMSP)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
