--- a/1_OSI_SAF_sea_ice_introductory/1_3c_OSI_SAF_sea_ice_mapping_Ice_Type.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3c_OSI_SAF_sea_ice_mapping_Ice_Type.ipynb
@@ -1603,7 +1603,7 @@
     "AMSR-2 (GCOM-W)",
     "AVHRR (Metop)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
