--- a/1_OSI_SAF_sea_ice_introductory/1_4_OSI_SAF_sea_ice_THREDDS.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_4_OSI_SAF_sea_ice_THREDDS.ipynb
@@ -818,7 +818,7 @@
    "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
