--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -2096,7 +2096,7 @@
     "AMSR-E (Aqua/Terra)",
     "SSM/I (DMSP)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
