--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -340,7 +340,7 @@
    "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
