--- a/1_OSI_SAF_sea_ice_introductory/1_3a_OSI_SAF_sea_ice_mapping_Ice_Concentration.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3a_OSI_SAF_sea_ice_mapping_Ice_Concentration.ipynb
@@ -5535,7 +5535,7 @@
     "AMSR-E (Aqua/Terra)",
     "SSM/I (DMSP)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
