--- a/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
@@ -1805,7 +1805,7 @@
    "orbit": "LEO",
    "satellite": "DMSP",
    "sensor": "SSMIS (DMSP)",
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
