--- a/2_OSI_SAF_sea_ice_use_case/2_1_OSI_SAF_sea_ice_Monthly_concentration_anomalies.ipynb
+++ b/2_OSI_SAF_sea_ice_use_case/2_1_OSI_SAF_sea_ice_Monthly_concentration_anomalies.ipynb
@@ -1483,7 +1483,7 @@
     "SMMR (NIMBUS)",
     "SSM/I (DMSP)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
