--- a/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
+++ b/2_OSI_SAF_sea_ice_use_case/2_2_OSI_SAF_sea_ice_plot_anomaly_as_a_spiral.ipynb
@@ -590,7 +590,7 @@
     "SMMR (NIMBUS)",
     "SSM/I (DMSP)"
    ],
-   "service": "",
+   "service": "OSI SAF",
    "subtheme": [
     "Climate system monitoring - Ocean",
     "Ocean dynamics"
