--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**EUMETSAT OSI SAF Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT <br>\n",
+    "**Copyright:** 2025 EUMETSAT <br>\n",
     "**License:** MIT"
    ]
   },
@@ -74,27 +74,28 @@
     "\n",
     "| Dataset | EUMETSAT collection ID | OSI SAF website description | OSI SAF identifier |\n",
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
-    "| Global Sea Ice Concentration (SSMIS) | EO:EUM:DAT:DMSP:OSI-401-B | <a href=\"https://osi-saf.eumetsat.int/products/osi-401-b\" target=\"_blank\">Description</a>   | OSI-401-B |\n",
+    "| Global Sea Ice Concentration (AMSR-2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
+    "| Level 2 PMW sea ice concentration | EO:EUM:DAT:0401  | <a href=\"https://osi-saf.eumetsat.int/products/osi-410-a\" target=\"_blank\">Description</a> | OSI-410-a | \n",
+    "| Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 | EO:EUM:DAT:0826 | <a href=\"https://osi-saf.eumetsat.int/products/osi-450-a\" target=\"_blank\">Description</a> | OSI-450-a \n",
+    "| Global Sea Ice Concentration climate data record (AMSR), release 3 | EO:EUM:DAT:0797 | <a href=\"https://osi-saf.eumetsat.int/products/osi-458\" target=\"_blank\">Description</a> | OSI-458 \n",
+    "| Global Sea Ice Concentration interim climate data record (AMSR2), release 3 | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-438\" target=\"_blank\">Description</a> | OSI-438 |\n",
+    "| Sea ice index | EO:EUM:DAT:0875  | <a href=\"https://osi-saf.eumetsat.int/products/osi-420\" target=\"_blank\">Description</a> | OSI-420 |\n",
     "| Global Sea Ice Edge | EO:EUM:DAT:MULT:OSIEDGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-402-d\" target=\"_blank\">Description</a> | OSI-402-d | \n",
     "| Global Sea Ice Type | EO:EUM:DAT:MULT:OSITYGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-403-d\" target=\"_blank\">Description</a> | OSI-403-d | \n",
     "| Global Sea Ice Emissivity | EO:EUM:DAT:DMSP:SISE50 | <a href=\"https://osi-saf.eumetsat.int/products/osi-404-a\" target=\"_blank\">Description</a> | OSI-404-a | \n",
     "| Global Low Resolution Sea Ice Drift | EO:EUM:DAT:MULT:GBL-LR-SIDR | <a href=\"https://osi-saf.eumetsat.int/products/osi-405-c\" target=\"_blank\">Description</a> | OSI-405-c | \n",
     "| Medium Resolution Sea Ice Drift | EO:EUM:DAT:METOP:NH-MR-SID | <a href=\"https://osi-saf.eumetsat.int/products/osi-407-a\" target=\"_blank\">Description</a> | OSI-407-a | \n",
-    "| Global Sea Ice Concentration (AMSR-2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
-    "| Level 2 PMW sea ice concentration | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-410-a\" target=\"_blank\">Description</a> | OSI-410-a | \n",
-    "| Global Sea Ice Concentration interim climate data record, release 3 | EO:EUM:DAT:0645 | <a href=\"https://osi-saf.eumetsat.int/products/osi-430-a\" target=\"_blank\">Description</a> | OSI-430-a \n",
-    "| Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 | EO:EUM:DAT:0826 | <a href=\"https://osi-saf.eumetsat.int/products/osi-450-a\" target=\"_blank\">Description</a> | OSI-450-a \n",
-    "| Global Sea Ice Concentration climate data record (AMSR), release 3 | EO:EUM:DAT:0797 | <a href=\"https://osi-saf.eumetsat.int/products/osi-458\" target=\"_blank\">Description</a> | OSI-458 \n",
-    "| Sea ice index | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-420\" target=\"_blank\">Description</a> | OSI-420 \n",
+    "\n",
     "\n",
     "### Learning outcomes\n",
     "\n",
     "At the end of this notebook you will know;\n",
     "* How to download different OSI SAF Sea Ice Products using FTP access\n",
+    "* Have basic information on how to choose between different OSI SAF Sea Ice Products.\n",
     "\n",
     "### Outline\n",
     "\n",
-    "Data from OSI SAF is available through multiple sources. Here we will guide you through FTP access to OSI SAF Sea Ice Data.\n",
+    "Data from OSI SAF are available through multiple sources. Here we will guide you through FTP access to OSI SAF Sea Ice Data.\n",
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,18 +274,31 @@
     "tags": []
    },
    "source": [
-    "### Global Sea Ice Concentration (SSMIS) :\n",
+    "## Sea Ice Concentration\n",
+    "\n",
+    "We will start by exploring how to download Sea Ice Concentration products. OSI SAF distributes two type of Sea Ice Concentration products:\n",
+    "\n",
+    "* The Near Real Time products, wich are product designed for operational use, where the latency between observation and data use is crucial. The data are produced as fast as possible.\n",
+    "* The Data Records, which are reprocessed data. These data takes more time to produce than the near real time, as such they are \"too old\" to be used for forecasting. However, they are more accurate, and should be prefered for every other usage, where the data can be two days old.\n",
+    "\n",
+    "We will start by looking at how to download our two Near Real Time products, and then explore our Data Record.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Global Sea Ice Concentration (AMSR-2):\n",
+    "\n",
+    "This product is a near real time product based on the <a href=\"https://space.oscar.wmo.int/instruments/view/amsr2\">AMSR-2</a> sensor, aboard the <a href=\"https://global.jaxa.jp/\">Jaxa</a>'s <a href=\"https://space.oscar.wmo.int/satellites/view/gcom_w\"> GCOM-W</a> satellite.\n",
     "\n",
     "Let's start by creating a specific folder to hold the Sea Ice Concentration products"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_SSMIS\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR2\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -299,11 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_SSMIS\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR2\", \"nh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -316,12 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = \"2023\"\n",
-    "Month = \"01\""
+    "year = \"2025\"\n",
+    "month = \"03\"\n",
+    "day = \"16\""
    ]
   },
   {
@@ -333,17 +348,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/archive/ice/conc/' + year + '/' + Month +'/'\n",
-    "file_pattern = 'ice_conc_nh_polstere-100_multi_'"
+    "path = '/archive/ice/conc_amsr/' + year + '/' + month +'/'\n",
+    "file_pattern = 'ice_conc_nh_polstere-100_amsr2_'+ year + month + day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +367,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +381,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_SSMIS', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR2', 'nh', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -374,16 +389,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere Antarctic Sea Ice Concentration"
+    "Let's try to download Sea Ice Concentration for the Southern hemisphere on a different date."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_SSMIS\", \"sh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR2\", \"sh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -396,12 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = \"2023\"\n",
-    "Month = \"06\""
+    "year = \"2025\"\n",
+    "month = \"06\"\n",
+    "day = \"10\"\n"
    ]
   },
   {
@@ -413,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/archive/ice/conc/' + year + '/' + Month +'/'\n",
-    "file_pattern = 'ice_conc_sh_polstere-100_multi_'"
+    "path = '/archive/ice/conc_amsr/' + year + '/' + month +'/'\n",
+    "file_pattern = 'ice_conc_sh_polstere-100_amsr2_'+ year + month + day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +448,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +462,104 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_SSMIS', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR2', 'sh', filename), 'wb').write)\n",
     "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Level 2 PMW sea ice concentration\n",
+    "\n",
+    "Most of the Sea Ice products OSI SAF is distributing are level 3 (mostly daily values). However, we do distribute level 2 Passive Micro Wave products (retrieval at the spatial and temporal scale of the sensor). Here we will concentrate on downloading the data from this level 2 product.\n",
+    "\n",
+    "Let's start by creating a specific folder to hold theLevel 2 PMW sea ice concentration products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_L2\")\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Level 2 PMW sea ice concentration product exist for SSMIS and AMSR-2 instruments\n",
+    "\n",
+    "Let's look at the AMSR intrument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_L2\", \"AMSR\")\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the date and path where to get the data from"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = \"2025\"\n",
+    "month = '07'\n",
+    "day = '01'\n",
+    "path = '/archive/ice/conc_l2_amsr/' + year + '/' + month + '/' + day\n",
+    "file_pattern = 'ice_conc_l2_amsr2_gw1_'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_L2', 'AMSR', filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you look at what we just downloaded, and compare it with what we downloaded earlier, you will see that, while the L3 daily data consist of one single file per day, here we downloaded 24 to 25 files. Each consist in fact of a few minutes of data retrieval by AMSR2 over one of the pole. We name it \"granule\"."
    ]
   },
   {
@@ -1259,160 +1371,6 @@
     "tags": []
    },
    "source": [
-    "### Level 2 PMW sea ice concentration\n",
-    "Let's start by creating a specific folder to hold theLevel 2 PMW sea ice concentration products"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_PMW\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Level 2 PMW sea ice concentration product exist for SSMIS and AMSR-2 instruments\n",
-    "\n",
-    "Let's look at the AMSR intrument"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_PMW\", \"AMSR\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "day = '01'\n",
-    "path = '/archive/ice/conc_l2_amsr/' + year + '/' + month + '/' + day\n",
-    "file_pattern = 'ice_conc_l2_amsr2_gw1_'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_PMW', 'AMSR', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the SSMIS intrument"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_PMW\", \"SSMIS\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the download path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "day = '01'\n",
-    "path = '/archive/ice/conc_l2_ssmis/' + year + '/' + month + '/' + day\n",
-    "file_pattern = 'ice_conc_l2_ssmis_'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'221 Goodbye.'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# connect ftp and download file\n",
-    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
-    "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
-    "files = ftp.nlst()\n",
-    "for file in files:\n",
-    "    if file_pattern in file:\n",
-    "        filename = file\n",
-    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_PMW', 'SSMIS', filename), 'wb').write)\n",
-    "ftp.quit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
     "### Global Sea Ice Concentration interim climate data record, release 3\n",
     "Let's start by creating a specific folder to hold the Global Sea Ice Concentration interim climate data record, release 3 products"
    ]
@@ -2059,7 +2017,7 @@
   "description": "This Jupyter Notebook shows how to access OSI SAF sea ice data via FTP.",
   "image": "../img/thumbs/1_1a_OSI_SAF_sea_ice_FTP_data_access_thumb.png",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cmts_learn_osi_saf_sea_ice",
    "language": "python",
    "name": "python3"
   },
@@ -2073,7 +2031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
