Updating AMSR SIC CDR

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -575,7 +575,7 @@
     "\n",
     "Let's now start to explore the Sea Ice Concentration AMSR based CDR. \n",
     "\n",
-    "This Data Record covers the period **ranging from 01/06/2002 to 31/12/2020**.\n",
+    "This Data Record covers the period **ranging from 01/06/2002 to 31/12/2020** with a data gap from 05/10/2011 -end of AMSR-E production- to 24/07/2012 -beginning of AMSR2 production.\n",
     "\n",
     "We'll start by creating a specific folder where we'll store the downloaded data, starting by the northern hemisphere ones.\n"
    ]
@@ -599,19 +599,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_nh_ease2-250_cdr-v3p0-amsr_20130612\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2020\"\n",
+    "hemisphere = 'nh'\n",
+    "year = '2013'\n",
     "month = '06'\n",
+    "day = '12'\n",
     "path =  '/reprocessed/ice/conc_amsr/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_nh_ease2-250_cdr-v3p0-amsr_'"
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_cdr-v3p0-amsr_'+ year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -620,8 +632,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -633,7 +646,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_AMSR_release', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR_CDR3', 'nh', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -641,16 +654,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere"
+    "Let's do the same for Southern hemisphere data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_AMSR_release\", \"sh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR_CDR3\", \"sh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -663,19 +676,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_sh_ease2-250_cdr-v3p0-amsr_20130612\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2020\"\n",
+    "hemisphere = 'sh'\n",
+    "year = '2013'\n",
     "month = '06'\n",
-    "path =  '/reprocessed/ice/conc_amsr/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_sh_ease2-250_cdr-v3p0-amsr_'"
+    "day = '12'\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_cdr-v3p0-amsr_'+ year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -684,8 +708,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -697,7 +722,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_AMSR_release', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR_CDR3', 'sh', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
