Updating AMSR SIC ICDR

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -567,7 +567,7 @@
     "## Sea Ice Concentration Climate Products\n",
     "\n",
     "Aside the Near Real Time products we've just explored, OSI SAF also distribute Sea Ice Concentration Climate products. \n",
-    "Climate products are reprocessed satellite data, with focussing on data accuracy rather than on data production latency. This mean that data takes more time to be processed (more than meteorological usage requires), but that they are more accurate. As this reprocessing is resource consuming, we do it once for a long period at a time, creating what we call a **Climate Data Record (CDR)**. In order to fit the gap between the ending day of the reprocessing, and the present day, OSI SAF process on the go what we name **Interim Climate Data Record (ICDR)**. The nominal files take about 2 weeks to be processed, and are completed by *fast tracks* files produced in two days that will be replaced by more accurate data once produced.\n",
+    "Climate products are reprocessed satellite data, with focussing on data accuracy rather than on data production latency. This mean that data takes more time to be processed (more than meteorological usage requires), but that they are more accurate. As this reprocessing is resource consuming, we do it once for a long period at a time, creating what we call a **Climate Data Record (CDR)**. In order to fit the gap between the ending day of the reprocessing, and the present day, OSI SAF process on the go what we name **Interim Climate Data Record (ICDR)**. The ICDR are designed to provide consistant data with the CDR it complete: the algorithm producing the data are as similar as possible to the one used for the CDR to ensure continuity of the data. The nominal files take about 2 weeks to be processed, and are completed by *fast tracks* files produced in two days that will be replaced by more accurate data once produced.\n",
     "\n",
     "For any application that are not time constraints (= that can afford data older than a few days), it is recommended to use Climate Product. Each of the product has a different time coverage, but all together, OSI SAF provides Climate quality Sea Ice assessment **ranging from 25/10/1978 to 2 weeks before present** (2 days if including the ICDR fast tracks, that are more accurate than NRT, but less than Climate data).\n",
     "\n",
@@ -732,35 +732,18 @@
    "source": [
     "### Global Sea Ice Concentration interim climate data record (AMSR2), release 3\n",
     "\n",
-    "Let's start by creating a specific folder to hold the Global Sea Ice Concentration interim climate data record, release 3 products"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_interim\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Global Sea Ice Concentration (AMSR-2) products exist for each hemisphere.\n",
+    "We'll now explore the Sea Ice Concentration AMSR based Interim Climate Data Record. This ICDR is designed to complement the CDR above. It was first started **from 15/05/2025 on**, when we aknowledged issues on other products (see SSMIS section below). Our teams are currently working on filling this gap by reprocessing a new extended version of the CDR.\n",
     "\n",
-    "Let's look at the Northern hemisphere"
+    "Let's start by creating a specific folder where we'll store the downloaded data, starting by the northern hemisphere ones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_interim\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR_ICDR3\", \"nh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -768,24 +751,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the download path"
+    "We then set the date and hemisphere we want the data from:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_nh_ease2-250_icdr-v3p0-amsr_20250522\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path =  '/reprocessed/ice/conc-cont-reproc/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_nh_ease2-250_icdr-v3p0_'"
+    "hemisphere = 'nh'\n",
+    "year = '2025'\n",
+    "month = '05'\n",
+    "day = '22'\n",
+    "path =  '/reprocessed/ice/conc-cont-reproc-amsr/v3p0/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_icdr-v3p0-amsr_'+ year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +789,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -807,7 +803,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_interim', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR_ICDR3', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -815,16 +811,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere"
+    "Let's try the same for southern hemisphere data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_interim\", \"sh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_AMSR_ICDR3\", \"sh\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -837,19 +833,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_sh_ease2-250_icdr-v3p0-amsr_20250522\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2023\"\n",
-    "month = '06'\n",
-    "path =  '/reprocessed/ice/conc-cont-reproc/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_sh_ease2-250_icdr-v3p0_'"
+    "hemisphere = 'sh'\n",
+    "year = '2025'\n",
+    "month = '05'\n",
+    "day = '22'\n",
+    "path =  '/reprocessed/ice/conc-cont-reproc-amsr/v3p0/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_icdr-v3p0-amsr_'+ year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -858,8 +866,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -871,7 +880,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_interim', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_AMSR_ICDR3', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
