Updating SSMIS&co SIC CDR&ICDR

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -732,7 +732,7 @@
    "source": [
     "### Global Sea Ice Concentration interim climate data record (AMSR2), release 3\n",
     "\n",
-    "We'll now explore the Sea Ice Concentration AMSR based Interim Climate Data Record. This ICDR is designed to complement the CDR above. It was first started **from 15/05/2025 on**, when we aknowledged issues on other products (see SSMIS section below). Our teams are currently working on filling this gap by reprocessing a new extended version of the CDR.\n",
+    "We'll now explore the Sea Ice Concentration AMSR based Interim Climate Data Record. This ICDR is designed to complement the CDR above. It provides complemetary data **from 2020 to two weeks before present** (two days if considering the fast-track files).\n",
     "\n",
     "Let's start by creating a specific folder where we'll store the downloaded data, starting by the northern hemisphere ones."
    ]
@@ -811,7 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try the same for southern hemisphere data"
+    "We can do the same for southern hemisphere data"
    ]
   },
   {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -888,36 +888,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3\n",
-    "Let's start by creating a specific folder to hold the Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 products\n"
+    "### Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 and related suspended ICDR.\n",
+    "For a longer coverage of Sea Ice Concentration retrievals, OSI SAF provides data based on SMMR, SSMI and SSMIS sensors. This products offer the longest satellite based Sea Ice monitoring. It ranges **from 25/10/1978 to 31/12/2020**.\n",
+    "This sensor familly has find a somehow abrupt discontinuation in 2025, following the end of life of SSMIS. Consequently the ICDR complementing this CDR is currently suspended. It ranges **from 01/01/2021 to 16/10/2025**.\n",
+    "\n",
+    "Our team is currently working on the reprocessing of the whole serie in a single CDR. Additionaly, new sensors (WSF-M1/MWI and Metop-SG-B1/MWI) might allow to resume the ICDR in a near future.\n",
+    "\n",
+    "Let's start by downloading data from the northern hemisphere.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_S\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
+    "hemisphere = 'nh'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 products exist for each hemisphere.\n",
-    "\n",
-    "Let's look at the Northern hemisphere"
+    "We then create a specific folder to hold the CDR files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_S\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_SSM_CDR3_1\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -930,19 +932,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_nh_ease2-250_cdr-v3p1_20130612\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2020\"\n",
+    "year = '2013'\n",
     "month = '06'\n",
-    "path =  '/reprocessed/ice/conc/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_nh_ease2-250_cdr-v3p0_'"
+    "day = '12'\n",
+    "path =  '/reprocessed/ice/conc/v3p1/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_cdr-v3p1_' + year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -951,8 +964,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -964,7 +978,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_S', 'nh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_SSM_CDR3_1', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -972,16 +986,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere"
+    "Let's download data from the ICDR, starting by setting a new file to hold it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_conc_S\", \"sh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_SSM_ICDR3\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -994,19 +1008,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_nh_ease2-250_icdr-v3p0_20250522\n"
+     ]
+    }
+   ],
    "source": [
-    "year = \"2020\"\n",
-    "month = '06'\n",
-    "path =  '/reprocessed/ice/conc/v3p0/'+ year + '/' + month\n",
-    "file_pattern = 'ice_conc_sh_ease2-250_cdr-v3p0_'"
+    "year = '2025'\n",
+    "month = '05'\n",
+    "day = '22'\n",
+    "path =  '/reprocessed/ice/conc-cont-reproc/v3p0/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_icdr-v3p0_' + year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1015,8 +1040,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1028,7 +1054,175 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_conc_S', 'sh', filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_SSM_ICDR3', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's focus on the Southern hemisphere now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere = 'sh'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then add a specific folder to hold southern hemisphere data in the CDR folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_SSM_CDR3_1\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the download path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_sh_ease2-250_cdr-v3p1_20130612\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2013'\n",
+    "month = '06'\n",
+    "day = '12'\n",
+    "path =  '/reprocessed/ice/conc/v3p1/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_cdr-v3p1_' + year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_SSM_CDR3_1', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's download data from the ICDR, starting simarly by setting a new file to hold it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_conc_SSM_ICDR3\", hemisphere)\n",
+    "os.makedirs(download_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the download path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_pattern =  ice_conc_sh_ease2-250_icdr-v3p0_20250522\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2025'\n",
+    "month = '05'\n",
+    "day = '22'\n",
+    "path =  '/reprocessed/ice/conc-cont-reproc/v3p0/'+ year + '/' + month\n",
+    "file_pattern = 'ice_conc_'+ hemisphere +'_ease2-250_icdr-v3p0_' + year + month + day\n",
+    "\n",
+    "print('file_pattern = ',file_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_conc_SSM_ICDR3', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
