Updating Sea Ice Index

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,36 +1230,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sea Ice Index\n",
-    "Let's start by creating a specific folder to hold the sea Ice Index products."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_index\")\n",
-    "os.makedirs(download_dir, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sea Ice Index exist for each hemisphere with monthly and daily data.\n",
+    "## Sea Ice Index\n",
     "\n",
-    "Let's look at the Northern hemisphere"
+    "The Sea-Ice Index provide basic values based on our Sea-Ice Concentration products to allows graphic visualisation of the Sea Ice situation on both poles, from 1978 to present. Aside visualisation available on our website, the values are distributed through our FTP server. \n",
+    "\n",
+    "Let's download them now, starting by creating a folder to hold it. Once again we will separate the hemispheres, starting by the northern one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_index\", \"nh\")\n",
+    "hemisphere = 'nh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_index\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -1272,16 +1265,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/prod_test/ice/index/v2p3/nh\n"
+     ]
+    }
+   ],
    "source": [
-    "path = '/prod_test/ice/index/v2p2/nh'"
+    "path = '/prod_test/ice/index/v2p3/'+ hemisphere\n",
+    "\n",
+    "print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1290,8 +1293,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1303,7 +1307,7 @@
     "for file in files:\n",
     "    if file.endswith(\".nc\"):\n",
     "        filename = file\n",
-    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_index', 'nh', filename), 'wb').write)\n",
+    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_index', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -1311,16 +1315,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Southern hemisphere"
+    "As you can see from the file we just downloaded, the Sea Ice Index provide with monthly and daily data concerning Sea Ice Extend and Sea Ice Area.\n",
+    "\n",
+    "Let's do the same now for the Southern hemisphere."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_index\", \"sh\")\n",
+    "hemisphere = 'sh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"sea_ice_index\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -1333,16 +1348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/prod_test/ice/index/v2p3/sh\n"
+     ]
+    }
+   ],
    "source": [
-    "path = '/prod_test/ice/index/v2p2/sh'"
+    "path = '/prod_test/ice/index/v2p3/'+ hemisphere\n",
+    "\n",
+    "print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1351,8 +1376,9 @@
        "'221 Goodbye.'"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1364,7 +1390,7 @@
     "for file in files:\n",
     "    if file.endswith(\".nc\"):\n",
     "        filename = file\n",
-    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_index', 'sh', filename), 'wb').write)\n",
+    "        ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'sea_ice_index', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
