SIE vs SIA explaination

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,20 @@
     "\n",
     "The Sea-Ice Index provide basic values based on our Sea-Ice Concentration products to allows graphic visualisation of the Sea Ice situation on both poles, from 1978 to present. Aside visualisation available on our website, the values are distributed through our FTP server. \n",
     "\n",
-    "Let's download them now, starting by creating a folder to hold it. Once again we will separate the hemispheres, starting by the northern one."
+    "Based on our Sea-Ice Concentration products, the Sea-Ice Index provides two type of information: \n",
+    "* The **Sea-Ice Area** defined as the *area covered by Sea-Ice*\n",
+    "* The **Sea-Ice Extend** defined as the *the total grid-area where the Sea-Ice concentration exceed 15%*\n",
+    "\n",
+    "<img src='https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-osi-saf-sea-ice/-/raw/main/img/Burgard_2020_SIA_vs_SIE.png'><br>\n",
+    "<figcaption>Difference between sea-ice area and sea-ice extent (inspired from <a href=\"https://www.ghrsst.org/wp-content/uploads/2021/04/SSTDefinitionsDiscussion.pdf\" target=\"_blank\">Burgard (2020)</a>)</figcaption>\n",
+    "\n",
+    "These calculation are provide as daily average, and as Monthly average. For each pole, the Sea-Ice Index provides then four files:\n",
+    "* monthly area\n",
+    "* monthly extend\n",
+    "* daily area\n",
+    "* daily extend\n",
+    "\n",
+    "Let's download them now, starting by creating a folder to hold it. Once again we will separate the hemispheres, starting by the northern one.\n"
    ]
   },
   {
