adding explanation and img NRT vs CDR

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -276,13 +276,16 @@
    "source": [
     "## Sea Ice Concentration Near Real Time products\n",
     "\n",
-    "We will start by exploring how to download Sea Ice Concentration products. OSI SAF distributes two type of Sea Ice Concentration products:\n",
+    "OSI SAF distributes two type of Sea Ice Concentration products:\n",
     "\n",
-    "* The Near Real Time products, wich are product designed for operational use, where the latency between observation and data use is crucial. The data are produced as fast as possible.\n",
-    "* The Data Records, which are reprocessed data. These data takes more time to produce than the near real time, as such they are \"too old\" to be used for forecasting. However, they are more accurate, and should be prefered for every other usage, where the data can be two days old.\n",
+    "* The Near Real Time products are products designed for operational use, where the latency between observation and data use is crucial. These data are produced as fast as possible. Their production is **time constrained**.\n",
+    "* The Data Records are reprocessed data, aiming at a the best data accuracy, and above all a **consistent quality**. These data takes more time to produce than the near real time, as such they are \"too old\" to be used for forecasting. However, since they are more accurate and consistent over a longer time-period, <u>they should be prefered for every non time-constrained usage</u> (where the data can be over a few days old).<br>\n",
+    "\n",
+    "<img src='https://gitlab.eumetsat.int/eo-lab-usc-open/ocean/sensors/learn-osi-saf-sea-ice/-/raw/main/img/AMSR_timeline.png'>\n",
+    "<figcaption>Timeline view of the OSI SAF AMSR based products. The Climate Data Record (CDR) and Interim Climate Data Record (ICDR) are two complementary products (cf. below). The Fast-Tracks file are file of the ICDR produced with a latency of one day, that will be overwritten after 16 days by a better accurate file. All file less than 16 days old in the CDR are Fast Tracks ones.</figcaption>\n",
     "\n",
     "We will start by looking at how to download our two Near Real Time products, and then explore our Data Record.\n",
-    "\n",
+    "We will start by exploring how to download Sea Ice Concentration products. \n",
     "\n",
     "\n",
     "### Global Sea Ice Concentration (AMSR-2):\n",
